--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,7 +1,7 @@
-// 🎨 Färgpalett
+//Färgpalett
 $primary-color: #00587b;
 $secondary-color: #b77a7a;
-$accent-color: #e7a6a6;
+$accent-color: #ffbdbd;
 
 $background-light: #f8f8f8;
 $background-dark: #1a1a1a;
