--- a/src/scss/components/_text-block.scss
+++ b/src/scss/components/_text-block.scss
@@ -2,18 +2,17 @@
 .intro {
   padding: 3rem 2rem;
   text-align: center;
-  background: #f8f8f8;
+  background: var(--bg-color);
 
   h2 {
     font-size: 2rem;
     margin-bottom: 1.2rem;
-    color: #00587b;
   }
   p {
     font-size: 1.2rem;
     max-width: 600px;
     margin: 0 auto;
     padding-bottom: 2rem;
-    color: #00587b;
+    color: var(--text-color);
   }
 }
