--- a/src/scss/pages/_sass.scss
+++ b/src/scss/pages/_sass.scss
@@ -17,7 +17,6 @@
 
   h3 {
     margin-top: 4rem;
-    color: $primary-color;
   }
   p {
     margin-top: 1.8rem;
