--- a/src/scss/themes/_light.scss
+++ b/src/scss/themes/_light.scss
@@ -1,4 +1,7 @@
 body {
-  background: $background-light;
-  color: $text-dark;
-}
+    background: $background-light;
+    color: $text-dark;
+  }
+  h2 {
+    color: $primary-color;
+  }
